--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>scroll detect example</title>
+	<title>scroll swipe example</title>
 </head>
 <body>
-	<div>scroll detect example (move around and check your console!)  Instantiate with a higher number for sensitivity to get longer delays between events (I like 4 the best)</div>
+	<div>scroll swipe example (move around and check your console!)  Instantiate with a higher number for sensitivity to get longer delays between events (I like 4 the best)</div>
 	<script src="js/bundle.js"></script>
 </body>
 </html>
