removed prevent default from scroll end

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 	<title>scroll swipe example</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body style="height: 100vh">
 	<div>scroll swipe example (move around and check your console!)  Instantiate with a higher number for sensitivity to get longer delays between events (I like 4 the best)</div>
+	<button onclick="alert('checking tap events')">Click</button>
 	<script src="js/bundle.js"></script>
 </body>
 </html>
