Support addEventListener option parameters

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body style="height: 100vh">
 	<div>scroll swipe example (move around and check your console!)  Instantiate with a higher number for sensitivity to get longer delays between events (I like 4 the best)</div>
 	<button id="kill">Kill Event Listeners</button>
+	<button id="restart">Restart Event Listeners</button>
 	<script src="js/bundle.js"></script>
 </body>
 </html>
